--- a/index.html
+++ b/index.html
@@ -7,63 +7,86 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
 	<link href="/static/fontawesome/fontawesome-all.css" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="styles.css">
+	<link rel="stylesheet" type="text/css" href="css/udacity_project1.css">
 	<title>Ashley Clark | Web Developer</title>
 </head>
 <body>
+
 	<header>
-		<img src="img/logo.jpg" alt="logo" class="logo">
+		<img src="http://res.cloudinary.com/acdev/image/upload/v1526155653/logo.jpg" alt="logo" class="logo">
 		<h1 class="indiefont">Ashley Clark</h1>
 		<hr>
 		<p class="indiefont">Web Developer</p>
-    </header>
+  </header>
    
-		
+	<div class="flex-grid">
+  <div class="col">
 	<main>
-		<img src="img/spacecomputer.jpg" alt="desktop computer with a galaxy screen-saver" class="computerimage">
+		<img src="http://res.cloudinary.com/acdev/image/upload/v1526156172/spacecomputer.jpg" alt="desktop computer with a galaxy screen-saver" class="computerimage">
 	
-	
-		<div id="aboutsection">
-			<h1 class="about" id="ABOUT">ABOUT</h1>
+	<div id="aboutsection">
+		  <h2 class="about" id="ABOUT">ABOUT</h2>
 			<hr>
 			<p>
-			I am learning web development, computer programming, and computer networking. I have experience using HTML, CSS, JavaScript, JQuery, Bootstrap, SQL and Java. I am enrolled in Pellissippi State's computer programming degree, Udacity's front-end web developer nanodegree, and working on my CISCO A+ and Networking certifications. In my free time I teach basic computer skills at a local non-profit for the elderly. I love spending time with my family, having coffee with friends, reading, learning about space, and listening to podcasts. </p>
+			I am learning web development, computer programming, and computer networking. I have experience using HTML, CSS, JavaScript, JQuery, Bootstrap, SQL and Java. I am enrolled in Pellissippi State's computer programming degree, Udacity's front-end web developer nanodegree, and working on my COMPTIA A+ and Networking+ certifications. In my free time I teach basic computer skills at a local non-profit for the elderly. I love spending time with my family, having coffee with friends, reading, learning about space, and listening to podcasts. </p>
    		</div>
 	</main>
+  </div>
+  </div>
 
-	<section>
-   		<div id="worksection">
-   			<h1 class="work" id="WORK">WORK</h1>
+  <section class="work">
+  <div class="col">
+	<div id="worksection">
+   			<h2 class="work" id="WORK">WORK</h2>
    			<hr>
    			<p>Below are links to projects that I will be building throughout the nanodegree in Udacity's program:</p>
-   		<div id="container">
-   		<figure> 
-   			<img src="img/controller.png" alt="nintendo controller" class="controller">
+  </div>
+       
+  <div class="col">
+  <div class="largeviewport">  
+   		<figure>  
+   			<img src="http://res.cloudinary.com/acdev/image/upload/v1526155664/controller.png" alt="nintendo controller" class="controller">
    			<figcaption>Video game clone</figcaption>
    		</figure>
-      	<figure>
-        	<img src="img/books.jpg" alt="stacked books and a door" class="books">
-        	<figcaption>book rating app</figcaption>
-    	</figure>
+  </div> 
+  </div> 
+  
 
-    	<figure>
-    		<img src="img/maphands.jpg" alt="human hands with a map painted on them" class="maphands">
+  <div class="col">
+    <figure>
+      <img src="http://res.cloudinary.com/acdev/image/upload/v1526155718/books.jpg" alt="stacked books and a door" class="books">
+        <figcaption>Book rating app</figcaption>
+    </figure>
+  </div>  
+      <div class="col"> 
+    	 <figure>
+    		<img src="http://res.cloudinary.com/acdev/image/upload/v1526155695/maphands.jpg" alt="human hands with a map painted on them" class="maphands">
        		<figcaption>Neighborhood map</figcaption>
-    	</figure>
-     </div>
-    </div>
-</div>
-</section>
-<section>
-    <div id="contactsection">
-    	<h1 class="contact" id="CONTACT">CONTACT</h1>
-    	<hr>
-    	<p>Email:</p>
-    	<p>Twitter:</p>
-    	<p>Linked-in:</p>
-    	<p>Github:</p>
-</div>
-</section>
+    	 </figure>
+  </div>
+  </div>
+  </section>     
+      
+  
+
+  
+
+  
+  <section class="contact">
+  <div class="col">
+  <div id="contactsection">
+    <h2 class="contact" id="CONTACT">CONTACT</h2>
+    <hr>
+    <p>Feel free to connect with me through Email, Twitter, Linkedin, or Github.</p>
+    <div class="contact_icons">
+      <a href="mailto:aclark5321@gmail.com" target= "blank"><i class="far fa-envelope fa-3x"></i></a>
+    <a href="https://twitter.com/Aclark1031"target="blank"><i class="fab fa-twitter fa-3x"></i></a>
+      <a href="https://www.linkedin.com/in/ashley-clark/" target="blank"> <i class="fab fa-linkedin fa-3x"></i></a>
+  <a href="https://github.com/tank-wsp"><i class="fab fa-github fa-3x" target="blank"></i></a>
+  </div>
+  </div>
+  </div>
+  </section>
 
 <footer>Made by Ashley Clark <i class="far fa-hand-spock"></i> &copy; 2018</footer>
 
